@@ -9,6 +9,7 @@
 - https://github.com/codecentric/chaos-monkey-spring-boot/pull/127[#127] Update dependencies to latest stable versions.
 - https://github.com/codecentric/chaos-monkey-spring-boot/pull/130[#130] Improvement 'Improve contributions clarity in README'
 - https://github.com/codecentric/chaos-monkey-spring-boot/pull/136[#136] Add example entry in changelog
+- https://github.com/codecentric/chaos-monkey-spring-boot/pull/131[#131] Remove deprecated MetricEvent constructor and adapt usage
 
 === New Features
 
@@ -20,5 +21,6 @@ This release was only possible because of these great humans:
 - https://github.com/ultcyber[@ultcyber]
 - https://github.com/Chrispy404[@Chrispy404]
 - https://github.com/Olfarmer[@Olfarmer]
+- https://github.com/Yann-P[@Yann-P]
 
 Thank you for your support!
